# rvsrg

./: .gitignore  Cargo.toml  LICENSE  README.md  REFACTOR_PLAN.md  deadcode2.txt  main.db  maps.db  settings.toml
.wiki/: Getting-Started.md  Home.md  Rework-Difficulty-Pagination.md
skins/default/: 10k.toml  4k.toml  colors.toml  conf.toml  general.toml  skin_4k.toml
skins/default/conf/: 4k.toml  5k.toml  6k.toml  7k.toml  gameplay.toml  hud.toml  menus.toml
songs/2399327 kaitendaentai - Hubris/: kaitendaentai - Hubris (Monoseul) [Advanced].osu  kaitendaentai - Hubris (Monoseul) [Another].osu  kaitendaentai - Hubris (Monoseul) [Extra].osu  kaitendaentai - Hubris (Monoseul) [Hyper].osu  kaitendaentai - Hubris (Monoseul) [Medium].osu  kaitendaentai - Hubris (Monoseul) [Vortex's Demise].osu
songs/other/: Yoshida Yasei - Override (Duckys) [anta ga kaita zusan na koodo  Collab Normal].osu  Yoshida Yasei - Override (Duckys) [aware aware  Expert].osu  Yoshida Yasei - Override (Duckys) [bakka motehayasu yuuza yo  Advanced].osu  Yoshida Yasei - Override (Duckys) [haita kotoba no ura nante   Hyper].osu  Yoshida Yasei - Override (Duckys) [shiru yoshi mo nai darou   Insane].osu
src/: app.rs  main.rs
src/core/input/: actions.rs  bindings.rs  mod.rs
src/database/: connection.rs  manager.rs  mod.rs  models.rs  query.rs  replay_storage.rs  scanner.rs
src/database/migrations/: 006_replay_file_storage.sql  007_add_bpm.sql
src/difficulty/: calculator.rs  mod.rs  registry.rs  rox_converter.rs
src/difficulty/builtin/: etterna.rs  mod.rs  osu.rs
src/input/: events.rs  keycode.rs  manager.rs  mod.rs
src/logic/: audio.rs  audio_thread.rs  engine.rs  game_loop.rs  mod.rs  replay_engine.rs  state.rs
src/logic/input/: editor.rs  game.rs  menu.rs  mod.rs
src/models/: menu.rs  mod.rs  replay.rs  search.rs  settings.rs  skin.rs  stats.rs
src/models/engine/: mod.rs  (+7 more)
src/render/: app.rs  context.rs  draw.rs  mock_data.rs  mod.rs  renderer.rs  resources.rs  ui.rs  utils.rs
src/renderer/: core.rs  mod.rs  pipeline.rs  text.rs  texture.rs
src/shaders/: background_shader.wgsl  constants.rs  progress_shader.wgsl  quad_shader.wgsl  shader.wgsl
src/shared/: messages.rs  mod.rs  snapshot.rs
src/state/: global.rs  mod.rs  traits.rs
src/states/: editor.rs  menu.rs  mod.rs  play.rs  result.rs
src/system/: bus.rs
src/views/: context.rs  gameplay.rs  menu.rs  mod.rs  result.rs  settings.rs
(+123 files in other folders)
