[package]
name = "rvsrg"
version = "0.1.0"
edition = "2024"

[dependencies]
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
# Gestion de la fenêtre
winit = "0.30"

# Moteur graphique (WebGPU)
wgpu = "27.0"

# Pour gérer l'asynchrone dans le main (wgpu est async)
pollster = "0.4"

# Chargement d'images (PNG, JPG)
image = "0.24"

# Pour envoyer des structures Rust brutes vers la mémoire GPU
bytemuck = { version = "1.14", features = ["derive"] }

# Logs (utile pour debugger wgpu)
env_logger = "0.11"
log = "0.4"

# Génération aléatoire (Optionnel pour la version Chart, requis pour la version random)
rand = "0.9"
wgpu_text = "27.0.1"
rosu-map = "0.2.1"
rodio = "0.18"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
tokio = { version = "1.0", features = ["full"] }
egui = "0.33"
egui-wgpu = { version = "0.33", default-features = false }
egui-winit = "0.33"
egui_extras = "0.33"
md5 = "0.8"
serde_json = "1.0"
