[package]
name = "rvsrg"
version = "0.1.0"
edition = "2024"
description = "A vertical scrolling rhythm game (VSRG) written in Rust"
license = "MIT"
repository = "https://github.com/Glubus/rvsrg"
keywords = ["rhythm-game", "vsrg", "osu", "etterna"]
categories = ["games"]

[dependencies]
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
# Window management
winit = "0.30"

# Graphics engine (WebGPU)
wgpu = "27.0"

# Async runtime for wgpu initialization
pollster = "0.4"

# Image loading (PNG, JPG)
image = "0.24"

# Send raw Rust structs to GPU memory
bytemuck = { version = "1.14", features = ["derive"] }

# Logging (useful for debugging wgpu)
env_logger = "0.11"
log = "0.4"

# Random generation (optional for chart mode, required for random mode)
rand = "0.9"
wgpu_text = "27.0.1"
rosu-map = "0.2.1"
rodio = "0.18"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
tokio = { version = "1.0", features = ["full"] }
egui = "0.33"
egui-wgpu = { version = "0.33", default-features = false }
egui-winit = "0.33"
egui_extras = "0.33"
md5 = "0.8"
serde_json = "1.0"
crossbeam-channel = "0.5"
minacalc-rs = { version = "0.2.2", features = ["osu"] }
rosu-pp = "3.1.0"
ssrrr = "0.2.1"
ordered-float = "4.2"
rfd = "0.16.0"
zstd = "0.13"
bincode = { version = "2.0.1", features = ["serde"] }
rhythm-open-exchange = "0.2.2"
